# CrappyScriptEngine

./: README.md  WhoCares.sln
WhoCares/: CMakeLists.txt  Makefile  WhoCares.vcxproj  WhoCares.vcxproj.filters  attribute.h  bootstrapper.cc  bootstrapper.h  builtins.cc  builtins.h  checks.cc  checks.h  compile-debugger.cc  compile-debugger.h  console.cc  console.h  factory.cc  factory.h  game.h  listeners.h  macro-utils.h  parser-ast.cc  parser-ast.h  pretty-print.h  templates.h  templates_library.h  test.js  token.h  whocares  whocares.cc  whocares.h  world.cc  world.h  worldgen.cc  worldgen.h  wrapper.h
WhoCares/Demo0/: 1.js  x.game
WhoCares/Demo1/: Game of Thrones2.game  blah.js
WhoCares/GOT - Test/: Game of Thrones.game  blah.js  templates.js
WhoCares/GOT - TestWarning/: Game of Thrones.game  blah.js  templates.js
